blowcomotion/static/scss/blowcomotion.scss
.footer__copyright__text {
    opacity: 0.07;
}

.footer {
    margin-top: unset;
}

.font-caprasimo {
    font-family: "Caprasimo", serif !important;
}

.font-schoolbell {
    font-family: "Schoolbell", cursive !important;
}

.font-rajdhani {
    font-family: "Rajdhani", sans-serif !important;
}

.font-rockville {
    font-family: 'Rockville Solid Regular' !important;
}

.blowco-purple {
    color: $blowco-purple !important;
}

.hero {
    min-height: 1000px;
}

@media screen and (max-width: 768px) {
    .hero {
        min-height: 600px;
    }
    
}

.upcoming-public-gigs {
    ul {
        --icon-size: .8em;
        --gutter: .5em;
        padding: 0 0 0 var(--icon-size);
    }

    ul li {
        padding-left: var(--gutter);
    }

    ul li::marker {
        content: "\f001";
        /* FontAwesome Unicode */
        font-family: FontAwesome;
        font-size: 2em;
        color: $blowco-purple;
    }

    h2, h3 {
        font-family: "Rammetto One", sans-serif;
        color: $blowco-purple;
    }

    p {
        font-family: "Delius", cursive;
        font-size: 1.5em;
        color: $blowco-purple;
    }
}

.countdown-wrapper {
    background-color: $blowco-translucent;
}

hr {
    border: 1px solid $blowco-purple;
    margin: 2px auto;
    width: 90%;
}


.accordion-list {
    h2, .btn, .btn-link {
        font-family: "Rammetto One", sans-serif;
        color: $blowco-purple !important;
        text-align: left;
    }
}

.feedback-form-modal-button {
    position: fixed;
    bottom: 40px;
    right: 20px;

    .site-btn {
        background-color: $blowco-translucent;
        color: white;
        padding: 7px 14px;
        cursor: pointer;
    }

    .site-btn:hover {
        background-color: $blowco-purple;
        color: white;
    }

    .site-btn:active {
        background-color: $blowco-darker-purple;
        color: white;
    }
}

#feedbackFormModal {
    .site-btn {
        width: 50%;
        background-color: $blowco-translucent;
        color: white;
        padding: 7px 14px;
        cursor: pointer;
    }

    .site-btn:hover {
        background-color: $blowco-purple;
        color: white;
    }

    .site-btn:active {
        background-color: $blowco-darker-purple;
        color: white;
    }
}

.contact__form {
    input#newsletter {
        height: unset;
    }
}

.notification-banner {
    span {
        margin: 12px 0;
    }

    p {
        margin-bottom: 0;
    }
}

.quote-block {
    .note {
        padding: 10px;
        border-left: 6px solid $blowco-purple;
        border-radius: 5px;
        

        .blockquote::before {
            content: "\275D";
            font-size: 4em;
            line-height: 0.1em;
            margin-right: 20px;
            margin-top: 18px;
            margin-bottom: 1px;
            vertical-align: -0.4em;
            opacity: 0.5;
            float: left;
        }

        .blockquote-footer {
            font-size: large;
        }
    }
}

// Sticky content wrapper - sticks to top after scrolling past
.sticky-content-wrapper {
    position: sticky;
    top: 0;
    z-index: 100; // High z-index to stay above most content but below modals
    background: $white-color;
    width: 100%;
}

